--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,8 @@
+name = "MixedModelsTutorials"
+uuid = "df1decc4-b7b3-11e9-2182-0db5ca2e8321"
+authors = ["Douglas Bates <dmbates@gmail.com>"]
+version = "0.1.0"
+
 [deps]
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
