--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
-*.jl.cov
 *.jl.*.cov
+*.jl.cov
 *.jl.mem
-deps/deps.jl
+*.log
+*.aux
+*.out
+*.tex
+jl_*/
+.DS_Store
+Manifest.toml
+/dev/
+/docs/build/
+/docs/site/
